--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
