--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "export": "next export",
     "now-build": "next build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "cypress open"
   },
   "keywords": [],
   "author": "Miranda J. Ignacio",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "cypress": "^3.3.1",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
